Implement feature to add new Product to Database

--- a/assets/form-templates/template-dvd.html
+++ b/assets/form-templates/template-dvd.html
@@ -1,6 +1,6 @@
 <div class="form-group row">
     <label for="inputSize" class="col-sm-2 col-form-label">Size</label>
     <div class="col-sm-3">
-        <input type="number" class="form-control" id="inputSize" placeholder="Product Size (Mb)" required>
+        <input type="number" class="form-control" id="inputSize" name="Size" placeholder="Product Size (Mb)" required>
     </div>
 </div>
