--- a/assets/form-templates/template-book.html
+++ b/assets/form-templates/template-book.html
@@ -1,6 +1,6 @@
 <div class="form-group row">
     <label for="inputWeight" class="col-sm-2 col-form-label">Weight</label>
     <div class="col-sm-3">
-        <input type="number" class="form-control" id="inputWeight" name="Weight" placeholder="Product Weight (kg)" required>
+        <input type="number" step="0.01" class="form-control" id="inputWeight" name="Weight" placeholder="Product Weight (kg)" required>
     </div>
 </div>
