--- a/assets/form-templates/template-furniture.html
+++ b/assets/form-templates/template-furniture.html
@@ -1,18 +1,18 @@
 <div class="form-group row">
     <label for="inputHeight" class="col-sm-2 col-form-label">Height</label>
     <div class="col-sm-3">
-        <input type="number" class="form-control" id="inputHeight" name="Height" placeholder="Product Height (cm)" required>
+        <input type="number" step="0.01" class="form-control" id="inputHeight" name="Height" placeholder="Product Height (cm)" required>
     </div>
 </div>
 <div class="form-group row">
     <label for="inputWidth" class="col-sm-2 col-form-label">Width</label>
     <div class="col-sm-3">
-        <input type="number" class="form-control" id="inputWidth" name="Width" placeholder="Product Width (cm)" required>
+        <input type="number" step="0.01" class="form-control" id="inputWidth" name="Width" placeholder="Product Width (cm)" required>
     </div>
 </div>
 <div class="form-group row">
     <label for="inputLength" class="col-sm-2 col-form-label">Length</label>
     <div class="col-sm-3">
-        <input type="number" class="form-control" id="inputLength" name="Length" placeholder="Product Length (cm)" required>
+        <input type="number" step="0.01" class="form-control" id="inputLength" name="Length" placeholder="Product Length (cm)" required>
     </div>
 </div>
